@@ -1,6 +1,6 @@
-#SET(FLTK_SKIP_OPENGL true)
-#SET(FLTK_SKIP_FORMS true)
-#SET(FLTK_SKIP_IMAGES true)
+SET(FLTK_SKIP_OPENGL true)
+SET(FLTK_SKIP_FORMS true)
+SET(FLTK_SKIP_IMAGES true)
 FIND_PACKAGE(FLTK)
 
 IF(FLTK_FOUND)
@@ -12,6 +12,7 @@ IF(FLTK_FOUND)
 
 	SET(OBDGUI_FL_SRCS
 		maindisplay.fl
+		logwindow.fl
 	)
 
 	FLTK_WRAP_UI(ckobdfl ${OBDGUI_FL_SRCS})
